--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script>
     window.$docsify = {
       routerMode: 'history',
+      loadSideBar: true,
       name: 'Ax-For的博客',
       maxLevel: 6,  // 最大支持渲染的标题层级
       auto2top: true,   // 切换页面后是否自动跳转到页面顶部
